# CatchSvante

./: .gitignore  README.md  pyproject.toml  result.csv  result_with_probs.csv
artifacts/: feature_spec.json
data/interim/: dataset.csv  verify.csv
data/processed/: test.csv  train.csv
data/raw/: dataset.json  verify.json
notebooks/: eda_presentation.ipynb
runs/20260306_134601/: training_summary.json
runs/20260307_105733/: training_summary.json
runs/20260307_105935/: training_summary.json
runs/20260307_110733/: training_summary.json
runs/20260307_111128/: training_summary.json
runs/20260307_111257/: training_summary.json
runs/20260307_112919/: training_summary.json
runs/20260308_142929/: training_summary.json
runs/20260308_151535/: training_summary.json
runs/20260308_153340/: training_summary.json
scripts/: full_pipeline.py  make_dataset.py  predict.py  split_dataset.py  train.py
src/svantecatch/: config.py  convert.py  evaluate.py  features.py  model.py  utils.py
